# pingcrm-flask

./: .coverage  .gitignore  README.md  pyproject.toml  settings.py
app/: __init__.py  dev.py  prod.py  test.py
app/routes/: auth.py  contact.py  dashboard.py  organization.py  user.py
static/vue/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
static/vue/src/: main.ts
static/vue/src/common/: FlashMessages.vue  Layout.vue  MainMenu.vue  Pagination.vue  SearchFilter.vue  TrashedMessage.vue
static/vue/src/pages/: Dashboard.vue  Login.vue
static/vue/src/pages/contacts/: Create.vue  Edit.vue  Search.vue
static/vue/src/pages/organizations/: Create.vue  Edit.vue  Search.vue
static/vue/src/pages/users/: Create.vue  Edit.vue  Search.vue
templates/: base.html
